# Project_AI

./: CMakeLists.txt  Config.json  README.md  main.cpp
data/: 1000.30.1.txt  1000.30.2.txt  1000.30.3.txt  1000.30.4.txt  1000.40.1.txt  1000.40.2.txt  1000.40.3.txt  1000.40.4.txt  1000.50.1.txt  1000.50.2.txt  1000.50.3.txt  1000.50.4.txt  1000.60.1.txt  1000.60.2.txt  1000.60.3.txt  1000.60.4.txt  500.20.1.txt  500.20.2.txt  500.20.3.txt  500.20.4.txt  500.30.1.txt  500.30.2.txt  500.30.3.txt  500.30.4.txt  500.40.1.txt  500.40.2.txt  500.40.3.txt  500.40.4.txt  500.50.1.txt  500.50.2.txt  500.50.3.txt  500.50.4.txt  gurobi.xlsx  output.txt  test.txt
multilevel_result/: 10.5.2_.json  100.30.1_.json  100_.json  100_20%1_30.json  100_4_20%_10%1_30.json  10_.json  10_10%1_30.json  10_15%1_30.json  10_20%.json  10_20%1_30.json  10_20%5_30.json  10_25%1_30.json  10_4_20%_0%1_30.json  10_4_20%_10%1_30.json  12_20%.json  12_20%1_30.json  12_4_20%_0%1_30.json  12_4_20%_10%1_30.json  150_6_20%_10%1_30.json  20_.json  20_15%.json  20_1_20%1_30.json  20_20%.json  20_20%1_30.json  20_20%5_30.json  20_2_20%1_30.json  20_3_20%1_30.json  20_4_20%1_30.json  20_4_20%_0%1_30.json  20_4_20%_10%1_30.json  50.10.1_.json  50_ (1).json  50_.json  50_10%1_30.json  50_10_20%1_30.json  50_10_20%_10%1_30.json  50_11_20%1_30.json  50_15%.json  50_15%1_30.json  50_1_20%1_30.json  (+24 more)
result/: 100_.json  50_.json  6_.json
result_real/: 10_20%_10%1.json  12_20%_10%1.json  20_20%_10%1.json  50_20%_10%.json  50_20%_10%1.json  50_20%_10%1_30.json  50_20%_10%2.json  50_20%_10%3.json  6_20%_10%1.json
(+17 files in other folders)
